--- a/AlgoList.html
+++ b/AlgoList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AlgoTduck</title>
+        <title>AlgoTduck|AlgoList</title>
        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, intial-scale=1.0">
         <link rel="stylesheet" href="styles.css" />
