--- a/AlgoList.html
+++ b/AlgoList.html
@@ -10,7 +10,7 @@
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
-                    <li><a href="AlgoriThms.html"><strong>HOME</strong></a></li>
+                    <li><a href="index.html"><strong>HOME</strong></a></li>
                     <li><a href="AlgoList.html"><strong>AlgoList</strong></a></li>
                 </ul>
             </nav>
