--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <footer class="footer">
             <h3>REPORT BUGS</h3>
             <p>
-                I am not a professional so this website may has some errors. If you find some of them please contact with us.
+                I am not a professional so this website may have some errors. If you find some of them please contact with us.
                 <br> 
                 This is my e-mail:<a href="mailto:atsorvat@gmail.com">Apostolis Tsorvantzis</a>
                 <br>
