--- a/AlgoList.html
+++ b/AlgoList.html
@@ -63,7 +63,28 @@
             <br>
                 Here is a text with the code that you can use : <a href="codes/quicksort.txt" download="quicksort">Download QuickSort</a>
             <p>
+                <strong>Counting Sort</strong>
+                <br>
+                It 's like the algorithm we use to shuffle the deck. The comlexity O(n+k). (n = array size, k = number of the biggest number digits)
+                <br>
+                This sorting algorithm you can use it if the array elements are between (0...9),(k=10). We do this because we want to use it for the radix sort.
+                <br>
+            </p>
+            <img src="Images/countsort.PNG">
+            <br>
+            Here is a text with the code that you can use : <a href="codes/countsort.txt" download="countsort">Download CountSort</a>
+            <p>
                 <strong>Radix Sort</strong>
                 <br>
+            </p>
+
+
+
+            <h2><strong>CryptAlgo</strong></h2>
+            <p>
+                <strong>Miller-Rabin Algorithm</strong>
+                <p>
+                    Is a primality test algorithm 
+                </p>
             </p>
         </section>
