--- a/AlgoList.html
+++ b/AlgoList.html
@@ -72,7 +72,7 @@
             </p>
             <img src="Images/countsort.PNG">
             <br>
-            Here is a text with the code that you can use : <a href="codes/countsort.txt" download="countsort">Download CountSort</a>
+            Here is a text with the code that you can use : <a href="codes/Countingsort.txt" download="countsort">Download CountingSort</a>
             <p>
                 <strong>Radix Sort</strong>
                 <br>
