--- a/AlgoList.html
+++ b/AlgoList.html
@@ -76,10 +76,12 @@
             <p>
                 <strong>Radix Sort</strong>
                 <br>
+                Repeate counting sort for each digit, while preserving the ordering of the prior step, until all digits have been considered. Complexity O(k*n).(n = array size, k = number of the biggest number digits)
             </p>
-
-
-
+            <br>
+            <img src="Images/radixsort.PNG">
+            <br>
+            Here is a text with the code that you can use : <a href="codes/radixsort.txt" download="radixsort">Download RadixSort</a>
             <h2><strong>CryptAlgo</strong></h2>
             <p>
                 <strong>Miller-Rabin Algorithm</strong>
